[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Enemies/Spider/Spider.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Spider/patrol/spider1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Spider/patrol/spider2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Spider/patrol/spider3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Spider/patrol/spider4.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Enemies/Spider/Health_bar_spider.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sprites/Health_bar/Pixel.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Health_bar/Overlay.png" type="Texture" id=8]
[ext_resource path="res://Assets/Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Patrol",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 9 )

[node name="Spider" type="KinematicBody2D" groups=[
"need_player_ref",
]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="Spider" type="AnimatedSprite" parent="."]
editor/display_folded = true
frames = SubResource( 1 )
animation = "Patrol"
frame = 3
playing = true

[node name="Barrel1" type="Position2D" parent="Spider"]
position = Vector2( 0.524114, 2.56802 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -30.0557, 9.61524, -30.1152, 2.05378, -15.1709, -12.8905, -8.08578, -12.831, -1.89371, -7.71062, 2.80987, -7.35339, 9.41871, -13.0096, 15.9085, -12.831, 30.7337, 2.05378, 31.0314, 9.67478, 28.888, 11.9968, 25.7324, 11.8777, 24.0653, 10.032, 23.8272, 2.29193, 15.0154, -5.38861, 13.7651, -4.85275, 17.8733, 1.04161, 18.1709, 9.43662, 16.3848, 11.8182, 13.1697, 12.1754, 11.5026, 10.0916, 10.669, 2.29193, 8.88285, 4.91165, 6.02498, 7.17414, 4.06019, 8.06722, 4.11973, 10.1511, -3.0845, 10.1511, -3.0845, 8.06722, -5.58514, 6.93598, -7.9667, 5.14981, -10.1696, 2.11332, -10.1101, 9.13893, -11.9558, 11.9373, -15.29, 11.9968, -16.838, 10.1511, -17.1357, 1.45839, -13.2061, -4.6146, -14.1588, -5.20999, -23.0301, 2.7087, -23.1492, 9.91293, -25.0544, 12.0563, -27.9718, 12.0563 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0.61709, -5.63364 )
rotation = -1.0472
enabled = true
cast_to = Vector2( 0, 45 )
collision_mask = 4

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.387464, -0.0265508 )
scale = Vector2( 3.03332, 1.22092 )

[node name="Health_bar_spider" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0.822661, -15.8218 )
rotation = 3.14159
scale = Vector2( -0.410858, -0.289363 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
display_health_text = false

[node name="Background" type="TextureRect" parent="Health_bar_spider"]
modulate = Color( 0.352941, 0.341176, 0.368627, 1 )
margin_left = -53.0
margin_top = -7.0
margin_right = 53.0
margin_bottom = 6.0
texture = ExtResource( 7 )
expand = true

[node name="Health" type="TextureRect" parent="Health_bar_spider"]
modulate = Color( 1, 0, 0, 1 )
margin_left = -53.0
margin_top = -7.0
margin_right = 53.0
margin_bottom = 6.0
texture = ExtResource( 7 )
expand = true

[node name="Overlay" type="Sprite" parent="Health_bar_spider"]
texture = ExtResource( 8 )

[node name="health_text" type="Label" parent="Health_bar_spider"]
margin_left = -15.1447
margin_top = -7.38227
margin_right = 20.8553
margin_bottom = 6.61773
custom_fonts/font = SubResource( 2 )
text = "100%"
align = 1
valign = 1
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
